--- a/WinchReceiver/platformio.ini
+++ b/WinchReceiver/platformio.ini
@@ -8,7 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
+;[env:nanoatmega328]
+;platform = atmelavr
+;board = nanoatmega328
+;framework = arduino
+
+[env:uno]
 platform = atmelavr
-board = nanoatmega328
+board = uno
 framework = arduino
