--- a/RemoteControlTransmitter/platformio.ini
+++ b/RemoteControlTransmitter/platformio.ini
@@ -8,10 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328
-framework = arduino
+;[env:nanoatmega328]
+;platform = atmelavr
+;board = nanoatmega328
+;framework = arduino
 
 [env:uno]
 platform = atmelavr
